# server-upd-tcp

./: benchmark_comparison.csv  benchmark_statistics_tcp.csv  benchmark_statistics_udp.csv  comparador.py
udp_client/: README.md  pyproject.toml  run.py
udp_client/analisadorUdp/: analisador.py  benchmark_results_20241126_022624.csv  benchmark_results_20241126_022853.csv  benchmark_results_20241126_023323.csv  benchmark_results_20241126_023331.csv  benchmark_results_20241126_023338.csv  benchmark_results_20241126_023346.csv  benchmark_results_20241126_023353.csv  benchmark_results_20241126_023401.csv  benchmark_results_20241126_023409.csv  benchmark_results_20241126_023416.csv  benchmark_results_20241126_023424.csv  benchmark_results_20241126_023432.csv  benchmark_results_20241126_023436.csv  benchmark_results_20241126_023439.csv  benchmark_results_20241126_023443.csv  benchmark_results_20241126_023447.csv  benchmark_results_20241126_023451.csv  benchmark_results_20241126_023454.csv  benchmark_results_20241126_023458.csv  benchmark_results_20241126_023502.csv  benchmark_results_20241126_023506.csv  benchmark_results_20241126_023509.csv  benchmark_results_20241126_023514.csv  benchmark_results_20241126_023518.csv  benchmark_results_20241126_023523.csv  benchmark_results_20241126_023527.csv  benchmark_results_20241126_023532.csv  benchmark_results_20241126_023536.csv  benchmark_results_20241126_023540.csv  benchmark_results_20241126_023545.csv  benchmark_results_20241126_023549.csv  benchmark_results_20241126_023553.csv  (+52 more)
udp_server/: .env  pyproject.toml
(+28 files in other folders)
